--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,44 @@
-name: Generate Datas
+name: Generate Datas and Snake
 
 on:
-  schedule: # Execute every 12 hours
-    - cron: "0 */12 * * *"
+  schedule:
+    # Execute every 6 hours
+    - cron: "0 */6 * * *"
   workflow_dispatch:
   push:
     branches:
       - master
 
 jobs:
-  build:
-    name: Jobs to update datas
+  generate_snake:
+    name: Generate Snake Animation
     runs-on: ubuntu-latest
     steps:
-      - name: Generate snake animation
-        uses: Platane/snk@master
+      # Checkout the repository
+      - uses: actions/checkout@v2
+
+      # Generate the snake SVG and GIF
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: WesleyS08
+          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: Push snake.svg to the output branch
+      # Show the status of the build
+      - run: git status
+
+      # Push changes to the master branch
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      # Push the generated files to the output branch
+      - name: Push snake.svg and snake.gif to the output branch
         uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  generate:
-    name: Generate snake.svg
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Generate snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: WesleyS08
-          outputs: dist/snake.svg?palette=github-dark
-
-      - name: Push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
